syntax = "proto3";
package pb;

service EventStore {
    // Create a new event to the event store
    rpc CreateEvent (Event) returns (Response) {}
}

message Event {
    int64 event_id = 1;
    string event_type = 2;
    int64 aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string ex_data = 6;
    string channel = 7; 
    string stream = 8;
}

message Response {
    bool is_success = 1;
    string error = 2;
}

message EventFilter {
    int64 event_id = 1;
    int64 aggregate_id = 2;
}

message EventResponse {
    repeated Event events = 1;
}